--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,7 @@
 server:
   port: 8080
   servlet:
-    context-path: /
+    context-path: /alliance
     session:
       cookie:
         name: UISESSION
