feat: Define los contratos de las operaciones del servicio
Implementa la definicion de los contratos segun el challenge adicional
se avanza con las pruebas unitarias

--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,13 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.19.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.owasp</groupId>
 			<artifactId>dependency-check-maven</artifactId>
 			<version>${owasp.version}</version>
