--- a/pom.xml
+++ b/pom.xml
@@ -71,9 +71,9 @@
 		Information of git repository
 	-->
 	<scm>
-		<url></url>
-		<connection></connection>
-		<developerConnection></developerConnection>
+		<url>https://github.com/dev-io21/ml-challenge</url>
+		<connection>scm:git:git@github.com:dev-io21/ml-challenge.git</connection>
+		<developerConnection>scm:git:git@github.com:dev-io21/ml-challenge.git</developerConnection>
 		<tag>master</tag>
 	</scm>
 
@@ -113,6 +113,13 @@
 			</properties>
 		</profile>
 		<profile>
+			<id>integration-test</id>
+			<properties>
+				<skip.integration.tests>false</skip.integration.tests>
+				<skip.unit.tests>true</skip.unit.tests>
+			</properties>
+		</profile>
+		<profile>
 			<id>prd</id>
 			<properties>
 				<activatedProperties>prd</activatedProperties>
@@ -120,20 +127,22 @@
 		</profile>
 	</profiles>
 
+	<!--
+		List of properties with constant versions
+	-->
 	<properties>
 		<java.version>11</java.version>
 		<owasp.version>6.0.1</owasp.version>
 		<junit-jupiter.version>5.7.0</junit-jupiter.version>
-		<skipTests>false</skipTests>
-		<skipITs>${skipTests}</skipITs>
-		<skipUTs>${skipTests}</skipUTs>
-		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-		<sonar.language>java</sonar.language>
-		<jacoco.version>0.8.4</jacoco.version>
 	</properties>
 
+	<!--
+		List of dependencies for complete the functionality
+	-->
 	<dependencies>
+		<!--
+			Spring boot
+		-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -144,23 +153,35 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+		<!--
+			Jackson json
+		-->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
 
+		<!--
+			Lomboc no boilerplate
+		-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
 
+		<!--
+			Spring boot - testing
+		-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 
+		<!--
+			Asserj - testing
+		-->
 		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
@@ -168,13 +189,15 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!--
+			Security dependencies validations
+		-->
 		<dependency>
 			<groupId>org.owasp</groupId>
 			<artifactId>dependency-check-maven</artifactId>
 			<version>${owasp.version}</version>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
 
 	<build>
@@ -200,7 +223,83 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<!--
+				Maven :: difining source directory for integrations-test clases
+			-->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>3.2.0</version>
+				<executions>
+					<execution>
+						<id>add-integration-test-source</id>
+						<phase>generate-test-sources</phase>
+						<goals>
+							<goal>add-test-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>src/itest/java</source>
+							</sources>
+						</configuration>
+					</execution>
+					<execution>
+						<id>add-integration-test-resource</id>
+						<phase>generate-test-resources</phase>
+						<goals>
+							<goal>add-test-resource</goal>
+						</goals>
+						<configuration>
+							<resources>
+								<resource>
+									<directory>src/itest/resources</directory>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!--
+				Surfire :: Manage unit-test
+			-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+				<configuration>
+					<includes>
+						<include>**/*Test.java</include>
+					</includes>
+					<skipTests>${skip.unit.tests}</skipTests>
+				</configuration>
+			</plugin>
+
+			<!--
+				Failsafe :: Manage integration-test
+			-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.22.2</version>
+				<executions>
+					<execution>
+						<id>integration-tests</id>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+						<configuration>
+							<includes>
+								<include>**/*ITest.java</include>
+							</includes>
+							<skipTests>${skip.integration.tests}</skipTests>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
 	</build>
-
 </project>
