--- a/pom.xml
+++ b/pom.xml
@@ -45,17 +45,17 @@
 
 	<!--
 		Private maven registry
-	-->
+
 	<repositories>
 		<repository>
 			<id>nexus-maven</id>
 			<url>http://server-cicd:8081/repository/maven-public/</url>
 		</repository>
 	</repositories>
-
+-->
 	<!--
 		Config maven repositories
-	-->
+
 	<distributionManagement>
 		<snapshotRepository>
 			<id>devops-snapshots</id>
@@ -66,7 +66,7 @@
 			<url>http://server-cicd:8081/repository/devops-releases/</url>
 		</repository>
 	</distributionManagement>
-
+-->
 	<!--
 		Information of git repository
 	-->
@@ -162,12 +162,18 @@
 		</dependency>
 
 		<!--
-			Lomboc no boilerplate
+			Lombok no boilerplate
 		-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.mahout</groupId>
+			<artifactId>mahout-core</artifactId>
+			<version>14.1</version>
 		</dependency>
 
 		<!--
