--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,4 +1,14 @@
 # +-----------------------------------------------------
+# |         SPRING DATASOURCE CONFIG
+# +-----------------------------------------------------
+spring:
+  datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://${DB_ML_CHALLENGE_DEV_HOST:localhost}:3306/dbcomunication
+    username: mlchallenge
+    password: ml2021++
+
+# +-----------------------------------------------------
 # |         SPRING LOGGIN CONFIG
 # +-----------------------------------------------------
 logging:
