--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,3 +20,15 @@ spring:
   jackson:
     serialization:
       INDENT_OUTPUT: false
+
+# +-----------------------------------------------------
+# |         MONITORING CONFIG
+# +-----------------------------------------------------
+management:
+  server:
+    port: 9090
+  endpoints:
+    web:
+      base-path: /monitor/actuator
+      exposure:
+        include: "*"
