fix: Ajusta version de java por compatibilidad con heroku
adicional se ajusta placeholder en el application-prd y se agregan
variables de entorno en el docker compose, se agrega igualemente la
documentacion de los servicios rest con swagger

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,9 @@ services:
       - 9090:9090
     environment:
       - DB_ML_CHALLENGE_HOST=db_comunication
+      - DB_ML_CHALLENGE_DB=dbcomunication
+      - DB_ML_CHALLENGE_USERNAME=mlchallenge
+      - DB_ML_CHALLENGE_PASSWORD=ml2021++
       - SPRING_PROFILES_ACTIVE=prd
     networks:
       - ntw_backend
