--- a/src/main/resources/application-prd.yaml
+++ b/src/main/resources/application-prd.yaml
@@ -4,9 +4,9 @@
 spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${DB_ML_CHALLENGE_HOST:pxukqohrckdfo4ty.cbetxkdyhwsb.us-east-1.rds.amazonaws.com}/${DB_ML_CHALLENGE_DB:e97et5lj5cneiqk3}
-    username: ${DB_ML_CHALLENGE_USERNAME:rv1xbbhf3xaqqtjp}
-    password: ${DB_ML_CHALLENGE_PASSWORD:tijzjf9o7vfjn5kv}
+    url: jdbc:mysql://${DB_ML_CHALLENGE_HOST:eyw6324oty5fsovx.cbetxkdyhwsb.us-east-1.rds.amazonaws.com}/${DB_ML_CHALLENGE_DB:s2mgoefor21fkef4}
+    username: ${DB_ML_CHALLENGE_USERNAME:memsn6opag5rk6nd}
+    password: ${DB_ML_CHALLENGE_PASSWORD:r0tmvzs1lzfl7x6z}
 
 # +-----------------------------------------------------
 # |         SPRING LOGGIN CONFIG
